updated to accomodate for [regen] arg for /nether command

--- a/plugin.yml
+++ b/plugin.yml
@@ -5,5 +5,5 @@ description: Nether plugin for ImDeity Kingdoms
 commands:
   nether:
     description: Go to the nether
-    usage: /nether
+    usage: /nether [regen]
     aliases: n
