--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,9 @@
 name: DeityNether
 main: com.imdeity.deitynether.DeityNether
-version: 1.2.6
+version: 1.2.7
 description: Nether plugin for ImDeity Kingdoms
 load: startup
+depend: [WorldEdit]
 commands:
   nether:
     description: Go to the nether
